Fix overflow bug

--- a/src/App/components/popouts.scss
+++ b/src/App/components/popouts.scss
@@ -1,5 +1,5 @@
 .ees-popout-wrapper {
-	position: absolute;
+	position: fixed;
 	right: 0;
 	transform: translateX(100%);
 	background-color: var(--menubg);
